--- a/CodingChallengeFramework/MazeSolver/MazeSolver.csproj
+++ b/CodingChallengeFramework/MazeSolver/MazeSolver.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MattHG.cs" />
     <Compile Include="MazeSolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
