--- a/CodingChallengeFramework/SoupServings/SoupServings.csproj
+++ b/CodingChallengeFramework/SoupServings/SoupServings.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FE4950A4-1CA0-4E98-959E-8873ABE59D5A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>CodingChallengeFramework</RootNamespace>
-    <AssemblyName>CodingChallengeFramework</AssemblyName>
+    <ProjectGuid>{B92EC201-BAF3-407B-9B35-1FDCF4074EA5}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>SoupServings</RootNamespace>
+    <AssemblyName>SoupServings</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,7 +31,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,16 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMazeSolver.cs" />
-    <Compile Include="IChallenge.cs" />
-    <Compile Include="ISoupServings.cs" />
-    <Compile Include="MazeGenerator.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="MattProbSpread.cs" />
+    <Compile Include="SoupServings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ISafeQueens.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\CodingChallengeFramework\CodingChallengeFramework.csproj">
+      <Project>{fe4950a4-1ca0-4e98-959e-8873abe59d5a}</Project>
+      <Name>CodingChallengeFramework</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
