--- a/CodingChallengeFramework/OperatorJumble/OperatorJumble.csproj
+++ b/CodingChallengeFramework/OperatorJumble/OperatorJumble.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MattTreeSearch.cs" />
+    <Compile Include="MattTreeSearchIndexWithAbs.cs" />
+    <Compile Include="MattTreeSearchIndex.cs" />
     <Compile Include="RandomAddition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
