--- a/CodingChallengeFramework/OperatorJumble/OperatorJumble.csproj
+++ b/CodingChallengeFramework/OperatorJumble/OperatorJumble.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MattTreeSearchResults.cs" />
     <Compile Include="MattTreeSearchStatics.cs" />
     <Compile Include="MattTreeSearch.cs" />
     <Compile Include="RandomAddition.cs" />
