--- a/CodingChallengeFramework/CCTests/CCTests.csproj
+++ b/CodingChallengeFramework/CCTests/CCTests.csproj
@@ -60,6 +60,10 @@
       <Project>{fe4950a4-1ca0-4e98-959e-8873abe59d5a}</Project>
       <Name>CodingChallengeFramework</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FewestPizzas\FewestPizzas.csproj">
+      <Project>{caa9e6c3-89f5-4d34-8882-dbb74cd1072e}</Project>
+      <Name>FewestPizzas</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MakeChange\MakeChange.csproj">
       <Project>{0e657c5f-972e-47fd-a63d-21b8e7bf8230}</Project>
       <Name>MakeChange</Name>
