--- a/CodingChallengeFramework/CodingChallengeFramework/CodingChallengeFramework.csproj
+++ b/CodingChallengeFramework/CodingChallengeFramework/CodingChallengeFramework.csproj
@@ -48,12 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IFewestPizzas.cs" />
     <Compile Include="IMakeChange.cs" />
     <Compile Include="IMazeSolver.cs" />
     <Compile Include="IChallenge.cs" />
     <Compile Include="ISoupServings.cs" />
     <Compile Include="MazeGenerator.cs" />
-    <Compile Include="OperatorJumble.cs" />
+    <Compile Include="IOperatorJumble.cs" />
     <Compile Include="PizzaPreferences.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
