--- a/CodingChallengeFramework/FewestPizzas/FewestPizzas.csproj
+++ b/CodingChallengeFramework/FewestPizzas/FewestPizzas.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OnePizzaPerPerson.cs" />
+    <Compile Include="TopFavoritesShare.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
