--- a/CodingChallengeFramework/HighestScorePath/HighestScorePath.csproj
+++ b/CodingChallengeFramework/HighestScorePath/HighestScorePath.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FE4950A4-1CA0-4E98-959E-8873ABE59D5A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>CodingChallengeFramework</RootNamespace>
-    <AssemblyName>CodingChallengeFramework</AssemblyName>
+    <ProjectGuid>{EC30198F-D6B3-422F-A403-33414F34F640}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>HighestScorePath</RootNamespace>
+    <AssemblyName>HighestScorePath</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,7 +24,6 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,11 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,22 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IHighestScorePath.cs" />
-    <Compile Include="IFewestPizzas.cs" />
-    <Compile Include="IMakeChange.cs" />
-    <Compile Include="IMazeSolver.cs" />
-    <Compile Include="IChallenge.cs" />
-    <Compile Include="ISoupServings.cs" />
-    <Compile Include="MazeGenerator.cs" />
-    <Compile Include="IOperatorJumble.cs" />
-    <Compile Include="PizzaPreferences.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="DownUntilWall.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ISafeQueens.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <ProjectReference Include="..\CodingChallengeFramework\CodingChallengeFramework.csproj">
+      <Project>{fe4950a4-1ca0-4e98-959e-8873abe59d5a}</Project>
+      <Name>CodingChallengeFramework</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
