changing HighestScorePath to MatrixSolution to match Zack's template

--- a/CodingChallengeFramework/CodingChallengeFramework/CodingChallengeFramework.csproj
+++ b/CodingChallengeFramework/CodingChallengeFramework/CodingChallengeFramework.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IHighestScorePath.cs" />
+    <Compile Include="IMatrix.cs" />
     <Compile Include="IFewestPizzas.cs" />
     <Compile Include="IMakeChange.cs" />
     <Compile Include="IMazeSolver.cs" />
