--- a/CodingChallengeFramework/MatrixScore/MatrixScore.csproj
+++ b/CodingChallengeFramework/MatrixScore/MatrixScore.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DownUntilWall.cs" />
+    <Compile Include="MattBinTreeOneline.cs" />
+    <Compile Include="MattBinTreeSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
